# tmi-ux

./: .clinerules  .dockerignore  .dosu.yml  .editorconfig  .gitignore  .lintstagedrc  .local-projects.json  .prettierrc  .sccignore  .stylelintignore  .stylelintrc  .trivyignore.yaml  AGENTS.md  ARCHITECTURE_NOTES.md  AUTHZ_ANALYSIS.md  BUNDLE_OPTIMIZATION_SUMMARY.md  CLAUDE.md  COMPREHENSIVE_TESTING_PLAN.md  DFD_V2_IMPLEMENTATION_STATUS.md  DIAGRAM_EDITING_IMPROVEMENTS.md  Dockerfile  Dockerfile.chainguard  Dockerfile.oci  EDGE_METHOD_CONSOLIDATION_PLAN.md  HEROKU_DEPLOYMENT.md  LICENSE.txt  NOTICE.md  README.md  SESSION_MANAGEMENT_ANALYSIS.md  TM_EDIT_IMPLEMENTATION_EXAMPLES.md  TM_EDIT_READONLY_ANALYSIS.md  WEBSOCKET_MIGRATION_PLAN.md  angular.json  context.md  convert-images.js  cypress.config.cjs  cypress.config.ts  debug-shape-defaults.json  dfd-standardization-plan.md  eslint.config.js  (+19 more)
.claude/: CLAUDE.md  i18n.config.json  settings.local.json
.codesandbox/: tasks.json
.github/: dependabot.yml
.husky/: commit-msg  post-commit  prepare-commit-msg
.serena/: project.yml
context/: ARCHITECTURE_NOTES.md  AUTHORIZATION.md  CLIENT_INTEGRATION_GUIDE.md  CLIENT_OAUTH_INTEGRATION.md  COLLABORATIVE_EDITING.md  Collaboration participant list UX design.md  DFD_API_NAMING_REFACTOR_PLAN.md  DFD_CODE_REDUNDANCY_ANALYSIS.md  DFD_COMPONENT_REFACTORING.md  DFD_GRAPH_INTERACTION.md  DFD_INTEGRATION_TEST_PLAN.md  DFD_PUBLIC_API_REFERENCE.md  DFD_REFACTORING_PLAN.md  DFD_TEST_COVERAGE_PLAN.md  DFD_X6_HISTORY_SERVICE_IMPLEMENTATION_PLAN.md  DIAGRAM_EDITOR_IMPLEMENTATION_PLAN.md  DIAGRAM_EDITOR_OVERVIEW.md  Developers Guide AntVX6 Graphing Library v2.md  FILE_SYSTEM_ACCESS_API.md  Interesting X6 Events.txt  PDF_REPORT_DIAGRAM_RENDERING_DESIGN.md  README.md  X6-HISTORY.md  actor-shape.json  authorization.md  debug-component-names.md  flow-shape.json  history-management-centralization-strategy.md  process-shape.json  security-boundary-shape.json  store-shape.json  tmi-server-integration-plan.md  tmi_api_server_authentication.md  tmi_server_integration_plan.md  x6-node-edge-creation-analysis.md
deliverables/: pre_recon_deliverable.md  (+17 more)
shared-api/sdk-examples/python-sdk/: README.md  pyproject.toml  requirements.txt  setup.py
shared-api/sdk-examples/python-sdk/examples/: basic_usage.py  websocket_collaboration.py
shared-api/sdk-examples/python-sdk/tmi_client/: __init__.py  client.py
shared-api/sdk-examples/python-sdk/tmi_client/auth/: __init__.py  oauth.py
shared-api/sdk-examples/python-sdk/tmi_client/models/: __init__.py  base.py  diagram.py  document.py  source.py  threat.py  threat_model.py
shared-api/sdk-examples/python-sdk/tmi_client/websocket/: __init__.py  collaboration.py
(+2103 files in other folders)
