[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "tmi-client"
version = "0.1.0"
description = "Python SDK for the Collaborative Threat Modeling Interface (TMI) API"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "TMI Development Team", email = "dev@tmi.com"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers", 
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.32.5",
    "websocket-client>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=0.24.0",
    "black>=24.10.0", 
    "isort>=5.13.2",
    "mypy>=1.13.0",
    "flake8>=7.1.1",
]

[project.scripts]
tmi-cli = "tmi_client.cli:main"

[project.urls]
Homepage = "https://github.com/your-org/tmi-python-sdk"
Repository = "https://github.com/your-org/tmi-python-sdk"
Issues = "https://github.com/your-org/tmi-python-sdk/issues"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy] 
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true